--- a/Tickets.html
+++ b/Tickets.html
@@ -43,7 +43,6 @@
             localStorage.setItem('ticketsData', JSON.stringify(inputData));
             window.location.href = 'Details.html';
         }
-        
     }">
         <div class="dates-serction">
             <h2>Dates</h2>
@@ -85,22 +84,8 @@
         <div class="duration-section">
             <h2>Duration</h2>
             <p>Select the duration of your visit:</p>
-            <!-- <select name="timeSlot" id="timeSlot" x-model="selectedTimeSlot">
-                <option value="7:00-8:00">7:00 am - 8.00 am</option>
-                <option value="8:00-9:00">8:00 am - 9:00 am</option>
-                <option value="9:00-10:00">9:00 am - 10:00 am</option>
-                <option value="10:00-11:00">10:00 am - 11:00 am (Peak)</option>
-                <option value="11:00-12:00">11:00 am - 12:00 pm</option>
-                <option value="12:00-1:00">12:00 pm - 1:00 pm</option>
-                <option value="1:00-2:00">1:00 pm - 2:00 pm</option>
-                <option value="2:00-3:00">2:00 pm - 3:00 pm</option>
-                <option value="3:00-4:00">3:00 pm - 4:00 pm</option>
-                <option value="4:00-5:00">4:00 pm - 5:00 pm</option>
-                <option value="5:00-6:00">5:00 pm - 6:00 pm (Peak)</option>
-            </select> -->
-            <select name="timeSlot" id="timeSlot" x-model="selectedTimeSlot">
+            <select name="timeSlot" id="timeSlot" x-model="selectedTimeSlot"></select>
 
-            </select>
             <h2>Visitors will be charged based on 1 hour based time slots</h2>
             <ul>
                 <li>
@@ -133,11 +118,11 @@
             <table>
                 <tr>
                     <td>Date</td>
-                    <td></td>
+                    <td x-text="selectedDate"></td>
                 </tr>
                 <tr>
                     <td>Time</td>
-                    <td></td>
+                    <td x-text="selectedTimeSlot"></td>
                 </tr>
                 <tr>
                     <td>Duration</td>
