--- a/Tickets.html
+++ b/Tickets.html
@@ -134,7 +134,7 @@
                 </table>
             </div>
 
-            <button x-on:click="$store.router.goto('Details Page')">Continue</button>
+            <button x-on:click="$store.router.goto('Details')">Continue</button>
 
         </section>
     </div>
