Gender option none

--- a/Details.html
+++ b/Details.html
@@ -80,6 +80,7 @@
                         <select type="gender" name="gender" id="gender" x-model="visitors.gender">
                             <option value="male">Male</option>
                             <option value="female">Female</option>
+                            <option value="">None</option>
                         </select>
                     </div>
                     <div>
