--- a/Details.html
+++ b/Details.html
@@ -84,7 +84,7 @@
                         </select>
                     </div>
                     <div>
-                        <button type="submit">Goto Payment</button>
+                        <button type="submit" x-on:click="$store.router.goto('Payments')">Goto Payment</button>
                     </div>
                 </form>
             </div>
