--- a/Tickets.html
+++ b/Tickets.html
@@ -105,7 +105,7 @@
                     </tr>
                     <tr>
                         <td>Duration</td>
-                        <td x-text="getSelectedDuration() ? getSelectedDuration().duration + ' (' + getSelectedDuration().hours + ' Hours)' : ''"></td>
+                        <td x-text="getSelectedDuration() ? getSelectedDuration().duration + ' (' + getSelectedDuration().hours + ' Hour)' : ''"></td>
                     </tr>
                     <tr>
                         <td class="tickets-cell">Tickets</td>
