--- a/Details.html
+++ b/Details.html
@@ -11,6 +11,7 @@
     <script src="javaScript/Router.js"></script>
     <script src="javaScript/Tickets.js"></script>
     <script src="javaScript/Details.js"></script>
+    <script src="javaScript/Payment.js"></script>
     <script src="https://unpkg.com/alpinejs" defer></script>
 </head>
 <body>
@@ -74,6 +75,7 @@
                     <div>
                         <label for="confirmationEmail"></label>
                         <input type="email" name="confirmationEmail" id="confirmationEmail" x-model="visitors.confirmationEmail" required>
+                        <!-- <p x-show="visitors.email && visitors.confirmationEmail && visitors.email !== visitors.confirmationEmail">Emails do not match!</p> -->
                     </div>
                     <div>
                         <label for="gender"></label>
@@ -84,7 +86,7 @@
                         </select>
                     </div>
                     <div>
-                        <button type="submit" x-on:click="$store.router.goto('Payments'); saveData()">Goto Payment</button>
+                        <button x-bind:disabled="!visitors.fullname || !visitors.mobile || !visitors.email || !visitors.confirmationEmail" x-on:click="$store.router.goto('Payments'); saveData()">Goto Payment</button>
                     </div>
                 </form>
             </div>
